--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ main{
 
 footer{
     background-color: black;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
